--- a/keyboardFeet/keyboardFeet_readMe.html
+++ b/keyboardFeet/keyboardFeet_readMe.html
@@ -1,4 +1,4 @@
 Razer Huntsman Keyboard Foot by MikronFPV August 17, 2020
-&nbsp⤷https://www.thingiverse.com/thing:4571658/makes (Part 1)
+⤷https://www.thingiverse.com/thing:4571658/makes (Part 1)
 
 Printed for my razer blackwidow v3 pro. 35mins print with 100% infill for a pair of feet. 
